Added startup arguments

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omnomcom-application",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Electron powered OmNomCom application",
   "repository": {
     "type": "git",
@@ -12,8 +12,8 @@
   "scripts:": {
     "start": "electron .",
     "postinstall": "electron-builder install-app-deps",
-    "build": "electron-builder --mac --windows --linux",
-    "release": "electron-builder --mac --windows --linux --publish always"
+    "build": "electron-builder --windows",
+    "release": "electron-builder --windows --publish always"
   },
   "build": {
     "appId": "saproto.omnomcom",
