--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omnomcom-application",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Electron powered OmNomCom application",
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
     "productName": "OmNomCom Application"
   },
   "dependencies": {
+    "electron-updater": "^4.3.9",
     "update-electron-app": "^2.0.1"
   },
   "devDependencies": {
