--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "omnomcom-application",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Electron powered OmNomCom application",
   "repository": {
     "type": "git",
@@ -9,7 +9,7 @@
   "main": "main.js",
   "author": "Jesse Visser",
   "private": true,
-  "scripts:": {
+  "scripts": {
     "start": "electron .",
     "postinstall": "electron-builder install-app-deps",
     "build": "electron-builder --windows",
